--- a/client/src/Components/HeroImage/HeroImage.css
+++ b/client/src/Components/HeroImage/HeroImage.css
@@ -1,3 +1,4 @@
+/*media query*/
 @media screen and (min-width: 500px) {
   .hero {
     height: 10rem;
@@ -10,6 +11,7 @@
     margin-left: 10rem;
   }
 }
+/*snow image*/
 #Hero {
   display: flex;
   margin-left: 110%;
@@ -18,32 +20,32 @@
   width: 75%;
   border: solid 4px black;
 }
-
+/*text left of image*/
 #WelcomeId {
   font-size: 2.1rem;
   margin-top: 30%;
 }
-
+/*text left of image*/
 #NameId {
   font-size: 2.5rem;
   font-weight: 900;
   margin-top: -40%;
 }
-
+/*text left of image*/
 #StudentId {
   font-size: 2rem;
   margin-top: -40%;
 }
-
+/*left page flexbox*/
 .LandingLeftFlex {
   display: flex;
   width: 40%;
 }
-
+/*right page flexbox*/
 .LandingRightFlex {
   width: 50%;
 }
-
+/*button styling*/
 #Cv
 {
  
@@ -55,7 +57,7 @@
   background-color: #fff;
   font-weight: 700;
 }
-
+/*button hover styling*/
 #cv:hover,
 button:hover {
   background-color: coral;
