--- a/client/src/Components/NavBar/Navbar.css
+++ b/client/src/Components/NavBar/Navbar.css
@@ -1,3 +1,5 @@
+
+/*header background*/
 #navbar {
   background: linear-gradient(#31a8aa, #ce8f31);
   height: 80px;
@@ -5,13 +7,13 @@
   justify-content: start;
   align-items: center;
 }
-
+/*menu bar icon*/
 #menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
 }
-
+/*overall nav bar area*/
 #nav-menu {
   width: 250px;
   height: 100vh;
@@ -22,14 +24,14 @@
   top: 0;
   transition: 850ms;
 }
-
+/* style when menu open*/
 #nav-menu-active {
   left: 0rem;
   transition: 350ms;
   padding: 2rem;
   z-index: 5rem;
 }
-
+/*nav text*/
 #nav-text {
   display: flex;
   justify-content: start;
@@ -40,7 +42,7 @@
   color: #fff;
   background: darkslategrey;
 }
-
+/* nav menu text styling*/
 #nav-text a {
   text-decoration: none;
   color: #fff;
@@ -60,7 +62,7 @@
 #nav-menu-items {
   width: 100%;
 }
-
+/* open nav style*/
 #navbar-toggle {
   width: 100%;
   display: flex;
