github link change

--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -18,7 +18,7 @@
 #gitHub {
   color: #fff;
   display: flex;
-  margin-top: 2%;
+  margin-top: 5ode xc%;
   font-size: 1.3rem;
 }
 /*p text style*/
