--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -18,8 +18,8 @@
 #gitHub {
   color: #fff;
   display: flex;
-  margin-top: 5ode xc%;
-  font-size: 1.3rem;
+  margin-top: 5%;
+  font-size: 1.1rem;
 }
 /*p text style*/
 p {
