--- a/client/src/Components/Hobbies/Hobbies.css
+++ b/client/src/Components/Hobbies/Hobbies.css
@@ -15,10 +15,11 @@ p {
   display: flex;
   flex-direction: column;
   text-align: center;
-  max-width: 60rem;
-  font-size: 1.5rem;
+  max-width: 100%;
+  font-size: 1.8rem;
   font-weight: 600;
-  line-height: 2;
+  line-height: 2.5;
+  margin-left: 15%;
 }
  /*flex row container holding images*/
 #ImageContainer {
