--- a/client/src/Components/WorkHistory/WorkHistory.css
+++ b/client/src/Components/WorkHistory/WorkHistory.css
@@ -16,16 +16,18 @@
 }
 /*large text styling*/
 #CareerGoals {
-  margin-top: 3rem;
+  display:flex;
+  flex-direction: column;
+  margin-top: -70%;
   font-weight: 900;
-  width: 40vw;
-  position: relative;
+  width: 35vw;
+  height:20vh;
 }
+
 p {
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 900;
-  line-height: 2;
 }
 /* styling of career/skill list*/
 #List {
@@ -48,11 +50,11 @@ p {
 }
 /*wrap container of employment history*/
 #wrap {
-  max-height: 30rem;
-  margin-top: 0rem;
-  margin-left: 20%;
-  width: 60%;
-  height: 100vh;
+  display:flex;
+  flex-direction: column;
+  font-weight: 900;
+  width: 40vw;
+  margin-top: -10%;
 }
 /*resume download button styling*/
 #ResumeDownload {
@@ -63,8 +65,8 @@ p {
   padding: 1rem;
   font-size: 1.5rem;
   justify-content: center;
-  margin-top: 20rem;
-  margin-right: 10rem;
+  margin-top: 15%;
+  margin-right: 10%;
 }
 
 p {
